Fixed li tag and contrast ratio

--- a/src/sections/hero/styles.module.css
+++ b/src/sections/hero/styles.module.css
@@ -65,7 +65,7 @@
 
 .HeroSection__HorizontalContainer__VerticalContainer__VerticalContainer h2 {
   max-width: 40.1875rem;
-  color: #C8C8C8;
+  color: #919191;
   font-family: Futura;
   font-size: 1.5rem;
   font-style: normal;
